# S.T.F.U

./: .gitignore  CONFIG_TUTORIAL.md  DIALOGUE_SUBTYPES.md  DialogueAnalyzer.cs  Directory.Build.props  PRISMAUI_MIGRATION.md  Program.cs  README.md  STFU.csproj  STFU.esp  STFU.sln
DialogueInterceptor/: ACTOR_SAY_RESEARCH.md  ACTOR_SAY_RESULTS.md  BUILD.md  CMakeLists.txt  EXTRADATA_RESEARCH.md  HOOK_FINDINGS.md  README.md  SKSE_PLUGIN_SPEC.md  TESTING.md  TESTING_ACTOR_SAY.md  vcpkg.json
DialogueInterceptor/include/: DialogueDatabase.h  DialogueLogger.h  PCH.h  PrismaUIMenu.h  PrismaUI_API.h  SKSEMenuFramework.h  STFUMenu.h  version.h
DialogueInterceptor/src/: ActorPlaySoundHook.cpp  AddTopicHook.cpp  AddTopicHook.h  Config.cpp  Config.h  ConstructResponseHook.cpp  ConstructResponseHook.h  DialogueDatabase.cpp  DialogueHook.cpp  DialogueHook.h  DialogueLogger.cpp  Logger.h  PapyrusInterface.cpp  PapyrusInterface.h  PopulateTopicInfoHook.cpp  PopulateTopicInfoHook.h  PrismaUIMenu.cpp  STFUMenu.cpp  STFUMenu_Settings.cpp  SceneHook.cpp  SceneHook.h  SceneMonitor.cpp  SceneMonitor.h  SettingsPersistence.cpp  SettingsPersistence.h  TopicResponseExtractor.cpp  TopicResponseExtractor.h  main.cpp
Patcher/: Program.cs  STFU.csproj  SynthesisMeta.json  global.json  runtimeconfig.template.json
PrismaUI/views/STFU/: index.html
SKSE/Plugins/PrismaUI/views/STFU/: index.html
STFU Patcher/: STFU.deps.json
STFU Patcher/Config/: STFU_Blacklist.yaml  STFU_Config.ini  STFU_Config.json  STFU_SkyrimNetFilter.yaml  STFU_SubtypeOverrides.yaml  STFU_Whitelist.yaml
STFU/STFU/: Program.cs  STFU.csproj  global.json
Scripts/: STFU_MCM.pex
Sound/STFU/: silent.fuz
Source/Scripts/: STFU_MCM.psc
web-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
web-ui/src/: app.tsx  global.d.ts  index.css  index.tsx  types.ts
web-ui/src/components/: advanced-edit-modal.tsx  advanced-entry-modal.tsx  blacklist.tsx  history.tsx  manual-entry-modal.tsx  responses-modal.tsx  settings.tsx  toast.tsx  whitelist.tsx
web-ui/src/lib/: skse-api.ts
web-ui/src/stores/: blacklist.ts  history.ts  settings.ts  toast.ts  whitelist.ts
